--- a/themes/stack/layouts/partials/head/custom.html
+++ b/themes/stack/layouts/partials/head/custom.html
@@ -1,5 +1,17 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7891761786816782"
   crossorigin="anonymous"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2RN5CWJTF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2RN5CWJTF');
+</script>
 <meta name="keywords" content="{{ with .Params.tags }}{{ delimit . ", "}}{{ end }}" />
 <!-- <meta name="description" content="{{ .Site.Params.Description }}" /> -->
 <!-- <meta name="description" content="{{ if .Params.summary }}{{ .Params.summary }}{{ end }}" /> -->
