--- a/themes/stack/assets/scss/partials/article.scss
+++ b/themes/stack/assets/scss/partials/article.scss
@@ -265,3 +265,10 @@
         }
     }
 }
+
+.advert-inline {
+    margin: 6rem 0 4rem 0;
+    padding: 1rem 0 1rem;
+    border-top: dotted 4px #ddd;
+    border-bottom: dotted 4px #ddd;
+}
