--- a/themes/stack/assets/scss/partials/layout/article.scss
+++ b/themes/stack/assets/scss/partials/layout/article.scss
@@ -413,3 +413,10 @@
         width: calc(100% + var(--card-padding) * 2);
     }
 }
+
+.advert-inline {
+    margin: 6rem 0 4rem 0;
+    padding: 1rem 0 1rem;
+    border-top: dotted 4px #ddd;
+    border-bottom: dotted 4px #ddd;
+}
