ad script changed

--- a/themes/stack/layouts/partials/adsense-inarticle.html
+++ b/themes/stack/layouts/partials/adsense-inarticle.html
@@ -2,15 +2,16 @@
 <div class="advert-inline">
 	<script
 		async
-		src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+		src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7891761786816782"
+		crossorigin="anonymous"
 	></script>
 	<ins
 		class="adsbygoogle"
 		style="display: block; text-align: center"
 		data-ad-layout="in-article"
 		data-ad-format="fluid"
-		data-ad-client="{{.Site.Params.Adsense.client}}"
-		data-ad-slot="{{.Site.Params.Adsense.inArticleSlot}}"
+		data-ad-client="ca-pub-7891761786816782"
+		data-ad-slot="4398446754"
 	></ins>
 	<script>
 		(adsbygoogle = window.adsbygoogle || []).push({});
